--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="bg-gradient-to-r from-gray-900 via-gray-800 to-black fixed w-full z-20 top-0 left-0 start-0 border-b border-gray-200 dark:border-gray-600">
+<nav
+  class="bg-gradient-to-r from-gray-900 via-gray-800 to-black fixed w-full z-20 top-0 left-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <!-- Logo -->
     <a href="iconos" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -12,16 +13,5 @@
       </svg>
       <span class="text-2xl font-semibold whitespace-nowrap dark:text-white">Iconsdev</span>
     </a>
-
-    <!-- Contenedor de los enlaces -->
-    <div class="items-center hidden w-full md:flex md:w-auto ml-auto" id="navbar-sticky">
-      <ul>
-
-        <li>
-          <a href="iconos"
-            class=" text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Iconos</a>
-        </li>
-      </ul>
-    </div>
   </div>
 </nav>
